Changed H2 database to PostgreSQL

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 			<version>2.1.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1201-jdbc4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
